--- a/templates/application.html
+++ b/templates/application.html
@@ -70,7 +70,7 @@
                         <!-- <input name="_redirect" type="hidden" id="name"
                             value="https://villastarrealty.netlify.app/templates/application-success.html"> -->
 
-                        <input type="hidden" name="_next" value="https://remax.netlify.app/templates/application-success.html">
+                        <input type="hidden" name="_next" value="https://remaxproperties.netlify.app/templates/application-success.html">
 
 
                         <label for="fullname">Fullname:</label>
