--- a/templates/application.html
+++ b/templates/application.html
@@ -64,8 +64,7 @@
                 </div>
 
                 <div class="form-container" data-aos="fade-up" data-aos-delay="300">
-                    <form action="https://formsubmit.co/realtorpatterson15@gmail.com" method="POST"
-                        enctype="multipart/form-data">
+                    <form action="https://formsubmit.co/realtorpatterson15@gmail.com" method="POST">
 
                         <!-- <input name="_redirect" type="hidden" id="name"
                             value="https://villastarrealty.netlify.app/templates/application-success.html"> -->
