--- a/css/style.css
+++ b/css/style.css
@@ -301,7 +301,7 @@ main {
 }
 
 footer {
-    background-color: var(--main-color);
+    background-color: var(--black);
     padding: 1rem;
     color: var(--secondary-color);
     min-height: 70vh;
